--- a/SmartMask-Web/src/main/webapp/pages/admin.html
+++ b/SmartMask-Web/src/main/webapp/pages/admin.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html lang="en" ng-app="app">
     <head>
-        <title>Smart Box App</title>
+        <title>Smart Face Mask</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../img/favicon.svg" rel="shortcut icon" sizes="32x32" >
@@ -35,7 +35,7 @@ and open the template in the editor.
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="../">Smart Box App</a>
+            <a class="navbar-brand" href="../">Smart Face Mask</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
