--- a/SmartMask-Web/src/main/webapp/pages/login.html
+++ b/SmartMask-Web/src/main/webapp/pages/login.html
@@ -12,7 +12,7 @@
         <script src="../js/sweetalert.min.js" type="text/javascript"></script>
         <script src="../js/console.image.js" type="text/javascript"></script>
         <script src="https://apis.google.com/js/platform.js" ></script>
-        <title>Smart Box App</title>
+        <title>Smart Face Mask</title>
     </head>
     <body >
         <div id="contenedor_carga">
@@ -100,7 +100,7 @@
                         <div class="content">
                             <h3>Are you new here ?</h3>
                             <p>
-                                Welcome to the Smart Box application.
+                                Welcome to the Smart Face Mask application.
                                 Sign up to be part of us.
                             </p>
                             <button class="btn transparent" id="sign-up-btn">
