--- a/SmartMask-Web/src/main/webapp/pages/profileadmin.html
+++ b/SmartMask-Web/src/main/webapp/pages/profileadmin.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="../">Smart Box App </a>
+            <a class="navbar-brand" href="../">Smart Face Mask </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
